k3s/manifests/pihole/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pihole-redirect-admin
  namespace: default
spec:
  redirectRegex:
    regex: "^https://pi\\.arpatek\\.dev/?$"
    replacement: "https://pi.arpatek.dev/admin/"
    permanent: false
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pihole-set-host
  namespace: default
spec:
  headers:
    customRequestHeaders:
      Host: "netrunner.home.arpa"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-pihole-redirect-admin@kubernetescrd,default-pihole-set-host@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pi.arpatek.dev
      secretName: arpatek-dev-tls
  rules:
    - host: pi.arpatek.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-external
                port:
                  number: 443
